<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_TextView"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="26sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

        <RadioButton
            android:id="@+id/radioButtonAndroid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/android_RadioButton"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonIOS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ios_RadioButton"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonWindows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/windows_RadioButton"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonRIM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rim_RadioButton"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_resultButton"
        android:textSize="16sp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/content_TextView"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonResult"
        tools:layout_editor_absoluteX="107dp" />

    <TextView
        android:id="@+id/textViewShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_margin="14dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult" />

</androidx.constraintlayout.widget.ConstraintLayout>